samples/_failures_safe/1761607826_a6eea1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25778521.c: In function ‘main’:
./samples/SAFE/__tmp_25778521.c:170:9: error: expected declaration or statement at end of input
  170 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_25778521.c:170:9: error: expected declaration or statement at end of input
